//Uncomment to apply plugin

buildscript {
    repositories {
        mavenLocal() // plugin published to maven local
    }
    dependencies {
        classpath 'org.coderank:CodeRanking:0.0.1' // plugin’s artifact
    }
}

plugins {
    id 'java-gradle-plugin'
    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
    id 'maven'
}

group 'org.coderank'
version '0.0.1'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'org.testng:testng:7.1.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:29.0-jre'
    implementation "org.javassist:javassist:3.28.0-GA"
    compile group: 'org.ow2.asm', name: 'asm', version: '9.1'
    compile group: 'org.ow2.asm', name: 'asm-tree', version: '9.1'
    compile group: 'org.ow2.asm', name: 'asm-util', version: '9.1'
    compile group: 'org.ow2.asm', name: 'asm-commons', version: '9.1'
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

gradlePlugin {
    plugins {
        simplePlugin {
            id = 'org.coderank.CodeRanking'
            implementationClass = 'org.coderank.CodeRankPlugin'
        }
    }
}

// Uncomment to apply plugin

apply plugin: 'org.coderank.CodeRanking' // applying plugin

//     * args
//     * args[0] - inputJarFileName
//     * args[1] - graphBuilderLocation
//     * args[2] - graphBuilderName
//     * args[3] - classFilesLocation
//     * args[4] - mode

// "/home/olesya/HSE_2020-1/java/maze/out/artifacts/maze_jar/maze.jar" "/home/olesya/HSE_2020-1/newestCodeRank/src/main/java/CodeRank/app/src/main/impl/javaLoader.jar"
// "CodeRank.app.src.main.impl.graph.Graph" "/home/olesya/HSE_2020-1/java/maze/out/production/maze/" "Dynamic"

coderank {
//    inputJarFileName = '/home/olesya/Downloads/junit-4.13.2.jar'
    inputJarFileName = '/home/olesya/HSE_2020-1/java/maze/out/artifacts/maze_jar/maze.jar'
    propertiesFileName = '/home/olesya/HSE_2020-1/newestCodeRank/CodeRanking/src/main/java/CodeRank/app/src/main/resources/analysis.properties'
    graphBuilderLocation = '/home/olesya/HSE_2020-1/newestCodeRank/src/main/java/CodeRank/app/src/main/impl/javaLoader.jar'
//    graphBuilderLocation = './build/classes/java/main/'
    graphBuilderName = 'CodeRank.app.src.main.impl.graph.Graph'
    classFilesLocation = '/home/olesya/HSE_2020-1/java/maze/out/production/maze/'
    mode = 'Dynamic'
}